--- a/src/components/Pokemon/Pokemon.css
+++ b/src/components/Pokemon/Pokemon.css
@@ -2,6 +2,10 @@
   width: 120px;
   height: 120px;
 }
+.name {
+  text-transform: capitalize;
+}
+
 .rock {
   background-color: rgb(148, 81, 81);
 }
